# TransitSession

./: .gitignore  CMakeLists.txt  README.md
core/: async_session.hpp  async_transport_session.hpp
example/: can_benchmark.cpp  can_session.cpp  latency_stats.hpp  serial_benchmark.cpp  serial_session.cpp  websocket_benchmark.cpp  websocket_server.cpp  websocket_session.cpp
session/: async_session.hpp
test/: core_queue_test.cpp
transport/can/: can_config.hpp  can_frame.hpp  can_session.hpp
transport/serial/: serial_config.hpp  serial_session.hpp
transport/websocket/: websocket_config.hpp  websocket_server.hpp  websocket_server_config.hpp  websocket_server_session.hpp  websocket_session.hpp
